style.css
body {
	/*background-color: beige;*/
	background-image:
		linear-gradient(to bottom, rgba(0,0,0,0.4) , rgba(0,0,0,0)),
    url('img.jpg');
	background-color: #141f32;
	background-size: cover;
	background-blend-mode: multiply;
	transition-duration: 1s;
}

@media screen and (max-width: 600px) {
  .btn-wrap{
  	flex-flow: column;
  }
  .heading h1{
  	font-size: 2em !important;
  }
  .subheading {
  	font-size: 15px !important;
  }
  .main-wrap{
  	margin-top: 10% !important;
  	padding-right: 5% !important;
  	padding-left: 5% !important;
  }
  .btn {
  	margin-top: 1% !important;
  	margin-bottom: 1% !important;
  	width: 100% !important;
  }
}


.subheading {
	margin: 0.1em 0 0.2em 0;
	font-size: 20px;
	font-weight: 400;
}

:root {
	--nav-text-color: #fafafa;
	/*--nav-text-color: #474747;*/

	--yellow: #FFE34E;
	--yellow-text: #BEA000;
	--yellow-bdr: #EEC900;

	--teal: #23F2C1;
	--teal-text: #099574;
	--teal-bdr: #1ED8AC;

	--pink: #FF4E8E;
	--pink-text: #8E2B4F;
	--pink-bdr: #E0407A;

	--green: #00DB4A;
	--green-text: #169541;
	--green-bdr: #00DB4A;

	--grey: #707070;
	--grey-text: #BEBEBE;
	--grey-bdr: #707070;

	--blue: #4585E4;
	--blue-text: #174486;
	--blue-bdr: #417CD3;

	--purple: #A237D4;
	--purple-text: #D782FF;
	--purple-bdr: #9836C7;

	--lightblue: #4ED4FF;
	--lightblue-text: #3490AE;
	--lightblue-bdr: #47BDE3;

	--straw: #E5FF9B;
	--straw-text: #8B9E56;
	--straw-bdr: #CAE186;

	--orange: #FDB62B;
	--orange-text: #BE8517;
	--orange-bdr: #D29723;
}

.yellow {
	background-color: var(--yellow);
	color: var(--yellow-text);
	border-color: var(--yellow-bdr) !important;
}

.teal {
	background-color: var(--teal);
	color: var(--teal-text);
	border-color: var(--teal-bdr) !important;
}

.pink {
	background-color: var(--pink);
	color: var(--pink-text);
	border-color: var(--pink-bdr) !important;
}

.green {
	background-color: var(--green);
	color: var(--green-text);
	border-color: var(--green-bdr) !important;
}

.grey {
	background-color: var(--grey);
	color: var(--grey-text);
	border-color: var(--grey-bdr) !important;
}

.blue {
	background-color: var(--blue);
	color: var(--blue-text);
	border-color: var(--blue-bdr) !important;
}

.purple {
	background-color: var(--purple);
	color: var(--purple-text);
	border-color: var(--purple-bdr) !important;
}

.lightblue {
	background-color: var(--lightblue);
	color: var(--lightblue-text);
	border-color: var(--lightblue-bdr) !important;
}

.straw {
	background-color: var(--straw);
	color: var(--straw-text);
	border-color: var(--straw-bdr) !important;
}

.orange {
	background-color: var(--orange);
	color: var(--orange-text);
	border-color: var(--orange-bdr) !important;
}


.add-habit-button {
	display: flex;
	justify-content: center;
	align-items: center;
	margin-top: 50px;
	font-size: 12px;
	font-family: "Klarna", sans-serif;
	font-weight: 400;
	color: var(--nav-text-color);
	letter-spacing: 0.25em;
	border: 1.5px solid var(--nav-text-color);
	border-radius: 10px;
	padding: 12px 15px 12px 15px;
	filter: opacity(80%);
	transition-duration: 0.1s;
	transition-timing-function: ease-in-out;
	user-select: none;
}

.add-habit-button:hover {
	transform: scale(1.05);
}


.main-wrap {
	display: flex;
	flex-flow: column wrap;
	padding: 0 20% 0 20%;
}

.btn-wrap {
	display: flex;
	justify-content: center;
	align-items: center;
	
}

.plus-sign {
	display: flex;
	flex-flow: column;
	align-items: center;
	justify-content: center;
	width: 60px;
	grid-column: 3;
	grid-row: 1 / span 2;
	margin: 0;
	line-height: 10px;
}

.btn {
	/*z-index: 1;*/
	display: grid;
	flex-flow: column;
	justify-content: flex-start;
	align-items: flex-start;
	width: 300px;
	height: 67px;
	border-radius: 15px;
	margin: 0.5%;
	font-family: 'Karla', sans-serif;
	font-weight: 700;
	letter-spacing: 0.15em;
	line-height: 27px;
	font-size: 1.5rem;
	transition-duration: 0.1s;
	transition-timing-function: ease-in-out;
	border: 1.5px solid;
	user-select: none;
	overflow: hidden;
	grid-template-columns: repeat(auto-fit, minmax(75%, 1fr));
}

.bar-container {
	display: flex;
	width: 102%;
	height: 20px;
	background-color: white;
	margin-top: auto;
	border-radius: 0 0 15px 15px;
	box-shadow: inset 0px 11px 8px -10px #bbb;
	grid-column: 1 / span 3;
	grid-row: 3;
}

.bar-progress {
	display: flex;
	width: 20%;
	border-radius: 0 5px 5px 15px;
	mix-blend-mode: multiply;
	border: none;
	transition-duration: 0.3s;
	transition-timing-function: ease-in-out;
}

.btn-title {
	font-size: 20px;
	line-height: 10px;
	margin: 15px 0 0 15px;
	grid-column: span 1 / 2;
	grid-row: 1;
}

.btn-subtitle {
	font-size: 10px;
	margin: 10px 0 10px 15px;
	line-height: 10px;
	grid-column: 1 / span 2;
	grid-row: 2;
}

.btn:hover {
	z-index: 999;
	filter: drop-shadow(0px 0px 5px #6e6e6e);
	transform: scale(1.05);
}

.btn:focus {
	z-index: 999;
	filter: drop-shadow(0px 0px 5px #6e6e6e);
	transform: scale(1.025);
}

.btn-inside {
	display: flex;
	justify-content: left;
}

.heading {
	margin-top: 5%;
	margin-bottom: 5%;
	letter-spacing: 0.22em;
	display: flex;
	flex-flow: column;
	justify-content:  center;
	align-items: center;
	line-height: 40px;
	font-family: 'Karla';
	color: var(--nav-text-color);
	user-select: none;
}

.heading h1 {
	font-family: "Playfair Display", serif;
	font-size: 4em;
}

.nav {
	display: flex;
	font-family: 'Karla';
	letter-spacing: 0.22em;
	color: var(--nav-text-color);
	align-items: center;
	justify-content: center;
	font-size: 1.2em;
	margin: 2.5% 0 30px 0;
}

.nav h6 {
	margin: 0 20px 0 20px;
	font-weight: 400;
}

